# myks-contact

./: .gitignore  AUTHORS  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py
contact/: forms.py  test_settings.py  test_urls.py  test_views.py  tests.py  urls.py  views.py
contact/locale/fr/LC_MESSAGES/: django.mo  django.po
contact/static/css/: contact.css
contact/templates/contact/: form.html  thanks.html
contact/tests/: __init__.py  settings.py  test_views.py  urls.py
contact/tests/templates/: base.html
